--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 .main-logo {
   height: 50px;
   width: 50px;
-  background-image: url(/assets/bricket.jpg.jpg);
+  background-image: url(/07-apr-25-muhammadmuamarqadafi/assets/logo.jpg.png);
   background-size: cover;
   background-position: center;
   border-radius: 50%;
@@ -24,13 +24,17 @@ nav > a {
 
 .banner-img {
   height: 400px;
-  background-image: url(/assets/banner.jpg);
+  background-image: url(/07-apr-25-muhammadmuamarqadafi/assets/banner.jpg.png);
   background-size: cover;
   background-position: center;
 }
 
 main > section {
-  height: 800px;
+  height: 700px;
+}
+
+h1 {
+  color: black;
 }
 
 .section-content {
