--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 .main-logo {
   height: 50px;
   width: 50px;
-  background-image: url(/07-apr-25-muhammadmuamarqadafi/assets/logo.jpg.png);
+  background-image: url(../assets/logo.jpg.png);
   background-size: cover;
   background-position: center;
   border-radius: 50%;
@@ -22,22 +22,52 @@ nav > a {
   padding: 8px;
 }
 
-.banner-img {
-  height: 400px;
-  background-image: url(/07-apr-25-muhammadmuamarqadafi/assets/banner.jpg.png);
-  background-size: cover;
-  background-position: center;
-}
-
-main > section {
-  height: 700px;
-}
-
 h1 {
   color: black;
 }
 
 .section-content {
+}
+
+.form-style .input-text {
+  height: 40px;
+  width: 100%;
+  border-radius: 10px;
+}
+.form-style {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  width: 50%;
+}
+textarea {
+  height: 50px;
+  width: 100%;
+}
+
+#hasil {
+  border: 2px solid;
+  width: 50%;
+}
+.kotak{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+}
+.item{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-direction: column;
+  width: 100px;
+  height: 200px;
+}
+.item img{
+  width: 100%;
+  height: 100px;
+  border-radius: 50%;
 }
 
 footer {
